<resources>
    <string name="app_name">SFW</string>
    <string name="sfwlogo">SFWLOGO</string>
    <string name="hintname">USERNAME</string>
    <string name="hintpin">PIN</string>
    <string name="hintphone">PHONE</string>
    <string name="btnregister">REGISTER</string>
    <string name="btnlogin">LOGIN</string>
    <string name="btnnewuser">NEW USER</string>
    <string name="txtforgotpin">Forgot Pin?</string>
    <string name="hintotp">OTP</string>
    <string name="btnverifyotp">VERIFY OTP</string>
    /ui
    <string name="startservice">START SERVICE</string>
    <string name="stopservice">STOP SERVICE</string>
    <string name="contacts">CONTACTS</string>
    <string name="location_service"> LOCATION SERVICE</string>
    <string name="name">name</string>
    <string name="name2">NAME</string>
    <string name="phone">PHONE</string>
    <string name="name3">NAME</string>
    <string name="delete">DELETE</string>
    <string name="view">VIEW</string>
    <string name="add">ADD</string>
    <string name="modify">MODIFY</string>
    <string name="timer">TIMER</string>
    <string name="stop_timer">STOP TIMER</string>
    <string name="start_timer">START TIMER</string>
    <string name="time">time</string>
    <string name="time2">time</string>
    <string name="textview">TextView</string>
    <string name="view_location_via">View location via</string>
    <string name="accuracy">Accuracy</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>
